tests/bad/dupfield0.tig
let
    type bad = { x: int, y: int, x: string }
in
    3
end
